<resources>
    <string name="app_name">Stop smoking</string>

    <!-- API -->
    <integer name="com_vk_sdk_AppId">7983610</integer>
    <string name="facebook_app_id">587827365775449</string>
    <string name="fb_login_protocol_scheme">fb587827365775449</string>

    <!-- BottomNavigation titles-->
    <string name="title_home">Home</string>
    <string name="title_desire">Desire</string>
    <string name="title_notes">Notes</string>
    <string name="title_chat">Chat</string>

    <!-- Info BottomSheet text-->
    <string name="info_what_does_it_mean_title">Что это значит?</string>
    <string name="info_free_time_description">Представим, что ты выкуриваешь в день 15 сигарет. В среднем на одну сигарету человек тратит 5 минут своей жизни.\n\nПоэтому, если ты не будешь курить целый день, то ты выиграешь 15 * 5 = 75 минут времени для того, чтобы заняться чем-то полезным.\nА ведь это больше часа твоей жизни в сутки!\n\nНапомню, что время, которое ты обычно тратишь на перекур, а так же тип устройства, благодаря которому ты употреблял никотин, всегда можно изменить в настройках.</string>
    <string name="info_strong_desire_description">В случае отказа от курения у каждого случаются приступы острого желания покурить. Когда с тобой это случится, зайди в дневник и оцени это желание по своей субъективной шкале.\nПосле этого результат приплюсуется сюда.\n\nЗачем это делать?\n- Так ты ненадолго отвлечёшься от приступа.\n- Чтобы в будущем можно было анализировать свои приступы и выбирать соответствующие пути их предотвращения.\n- Чтобы потом, когда всё это закончится, ты мог зайти сюда и посмотреть, какой ты молодец и сколько раз ты переступал через себя, чтобы добиться результата.</string>

    <!-- Auth screen-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password_again">Password again</string>
    <string name="title_already_have_an_account">Already have an account?</string>
    <string name="title_first_time_here">First time here?</string>

    <!-- Health monitoring -->
    <string name="health_20_min_title">Пульс</string>
    <string name="health_2_hours_title">Работа почек</string>
    <string name="health_8_hours_title">Содержание кислорода</string>
    <string name="health_12_hours_title">Уровень угарного газа</string>
    <string name="health_1_day_title">Никотин выведен из организма</string>
    <string name="health_2_days_title">Восстановление лёгких запущено</string>
    <string name="health_4_days_title">Пик синдрома отмены</string>
    <string name="health_5_days_title">Восстановление рецепторов запущено</string>
    <string name="health_8_days_title">Восстановление рецепторов</string>


    <string name="health_20_min">Частота сердечных сокращений снижается и приходит в норму, начинает нормализовываться артериальное давление. Повышается активность организма и увеличивается функция работы почек.</string>
    <string name="health_2_hours">Почки начинают очищать кровь от никотина и выводить его из организма.</string>
    <string name="health_8_hours">В крови увеличивается уровень кислорода, а уровень угарного газа уменьшается вдвое. Продолжается процесс вывода никотина из организма, начинается запуск синдромаа отмены.</string>
    <string name="health_12_hours">Уменьшается одышка, дышать становится легче. Кровь полностью отчистилась от угарного газа. Уровень кислорода в крови начинает увеличивается.</string>
    <string name="health_1_day">Начинает снижаться риск сердечного приступа. Начало абстинентного синдрома - твой организм начинает испытывать жар и ломку. Но ты с этим обязательно справишься!</string>
    <string name="health_2_days">Бронхи начинают избавляться от слизи. Может появиться сильный кашель со слизью, это - естественный процесс восстановления легких.</string>
    <string name="health_4_days">Достигнут пик абстинентного синдрома. Если ты добрался до сюда, ты - молодец! Нормализуется кровообращение. Слизистая желудка начинает восстанавливаться. Возможно усиление влажного кашля с отхождением мокроты.</string>
    <string name="health_5_days">Улучшается работа вкусовых рецепторов, вкус пищи становится насыщеннее. Тонус кровеносных сосудов приближается к нормальному уровню.</string>
    <string name="health_8_days">Оживают обонятельные и вкусовые рецепторы, поэтому пища приобретает нормальный вкус и запах, повышается аппетит.</string>

</resources>