<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/info_what_does_it_mean_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_free_time_description"
            style="@style/Text.Width_Constrained.Black.Medium"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/info_free_time_description"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_text" />

        <TextView
            android:id="@+id/info_strong_desire_description"
            style="@style/Text.Width_Constrained.Black.Medium"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/info_strong_desire_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>